修改了一下错别字  就当没看到好了

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <script >
         var vm = new Vue({
             el:"#app",
-            components:componentList,
+            components:componentsList,
             beforeMount:async function(){
                 this.思源伺服ip = window.location.host
                 this.主界面= window.parent.document
